/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'javax.servlet:servlet-api:2.5'
   
    implementation 'org.apache.commons:commons-lang3'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework:spring-webmvc'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    implementation 'org.asynchttpclient:async-http-client:2.12.3'
    implementation 'org.apache.httpcomponents:httpasyncclient:4.1.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'org.bitbucket.b_c:jose4j:0.9.6'
    implementation 'com.beust:jcommander:1.82'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.google.code.gson:gson:2.10.1'
	testImplementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
	testImplementation 'commons-io:commons-io:2.11.0'
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework
            useJUnitJupiter('5.10.1')
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named("bootJar") {
	launchScript()
}
